# slackbot

./: .flake8  .gitignore  Makefile  README.md  auth.py  chatbot.py  client.py  crawler.ipynb  main.py  past_record.json  record_collector.py  requirements.txt  setup.cfg  user.py  utils.py
control/: control.py
model/: auth.py  model.py
utils/: logger_setting.py
view/: template.py  view.py
