[metadata]
name = slackbot
author = C.H. Lee
author-email= chenghaolee0125@gmail.com
summary = slackbot, a leetcode-notion-slack chatbot
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

[options]
python_requires = >=3.8
packages = find:
setup_requires =
    setuptools
install_requires =
    slack-bolt==1.6.1
    slack-sdk==3.7.0
    requests==2.25.1
    google-cloud-storage==1.40.0


[options.extras_require]
develop=
    black>=22.1.0
    isort>=5.10.1
    flake8>=4.0.1
    flake8-bugbear>=22.1.11
    flake8-isort>=4.1.1
    pep8-naming>=0.12.1
    pytest>=7.0.1
    tqdm>=4.62.1
    loguru>=0.5.3
    

[flake8]
# black line length is still the default 88
max-line-length = 110
per-file-ignores =
    __init__.py: F401
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude = .vscode,.git,__pycache__,configs,docs,models,resources,submodules,temp

[isort]
profile = black
reverse_relative = True
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = slackbot
skip = .vscode,.git,__pycache__,configs,docs,models,resources,submodules,temp